<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_assignments">

    <fragment
        android:id="@+id/nav_assignments"
        android:name="com.hats.plannit.ui.home.HomeFragment"
        android:label="@string/menu_assignments"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.hats.plannit.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.hats.plannit.ui.courses.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses"/>

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.hats.plannit.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hats.plannit.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_signout"
        android:name="com.hats.plannit.ui.signout.SignoutFragment"
        android:label="@string/menu_signout"
        tools:layout="@layout/fragment_signout" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.hats.plannit.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
</navigation>