<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:scrollbarAlwaysDrawVerticalTrack="false">

    <ImageView
        android:layout_width="320dp"
        android:layout_height="135dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:src="@drawable/plannit_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/adreena_script_font"
        android:text="@string/app_name"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="333dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/thistle_super_rounded_rectangle_background"
        android:gravity="center"
        android:hint="@string/student_id"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/blue_violet"
        android:textColorHint="@color/blue_violet"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="333dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/thistle_super_rounded_rectangle_background"
        android:textStyle="bold"
        android:textColor="@color/blue_violet"
        android:textColorHint="@color/blue_violet"
        android:inputType="textPassword"
        android:visibility="visible"
        android:importantForAutofill="no"
        android:singleLine="true"
        android:gravity="center"
        android:hint="@string/password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_thistle_super_rounded_rectangle_background"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:textColor="@color/light_blue"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/sign_up_text"/>

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@drawable/light_blue_rounded_rectangle_border"
        android:textColor="@color/light_blue"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/sign_up"/>

</LinearLayout>